--- a/pages/edit-profile.html
+++ b/pages/edit-profile.html
@@ -859,7 +859,7 @@
                     <div class="footer-logo">
                         <img src="../img/logo-white.svg" alt="Hardy Home and Garden">
                     </div>
-                    <p>Connecting gardeners and building sustainable communities one harvest at a time.</p>
+                    <p>The community garden in your pocket.</p>
                 </div>
                 <div class="footer-links">
                     <h3>Quick Links</h3>
