--- a/pages/contact.html
+++ b/pages/contact.html
@@ -686,7 +686,7 @@
                 // Send email to Hardy admin
                 console.log('Sending email to Hardy admin...');
                 await sendEmail({
-                    to: 'info@hardygarden.com', // You can change this to your actual support email
+                    to: 'gdubc3+hardy@gmail.com',
                     subject: `Contact Form: ${formData.subject}`,
                     html: `
                         <div style="font-family: Arial, sans-serif;">
