--- a/pages/support.html
+++ b/pages/support.html
@@ -515,7 +515,7 @@
                     <h3>Hardy Gear</h3>
                     <p>Show your support with Hardy merchandise. Every purchase helps us grow the platform.</p>
                     <button class="btn btn-secondary" disabled>Coming Soon</button>
-                    <div class="coming-soon-badge">Spring 2025</div>
+                    <div class="coming-soon-badge">Fall 2025</div>
                 </div>
             </div>
         </section>
