--- a/pages/auth.html
+++ b/pages/auth.html
@@ -641,6 +641,14 @@
             <div class="error-message" id="signup-error"></div>
             <div class="success-message" id="signup-success"></div>
             
+            <!-- Email Notification Notice -->
+            <div style="background-color: #f0f8f1; border: 1px solid #c3e6c7; border-radius: var(--radius-md); padding: var(--spacing-md); margin-bottom: var(--spacing-lg); color: var(--text-primary);">
+                <p style="margin: 0; font-size: 0.9rem;">
+                    <i class="fas fa-envelope" style="color: var(--hardy-green); margin-right: var(--spacing-xs);"></i>
+                    <strong style="color: var(--hardy-green-dark);">Email notifications:</strong> Messages are sent to your registered email. Corporate or business email users may need to ask their IT department to whitelist <strong>notifications@hardyhome.us</strong>.
+                </p>
+            </div>
+            
             <form id="signup-form">
                 <div class="form-group">
                     <label for="nickname">Nickname</label>
