--- a/pages/auth.html
+++ b/pages/auth.html
@@ -740,7 +740,7 @@
                         </optgroup>
                     </select>
                     <small id="zip-help" class="form-text">
-    Hardy is currently serving Kenosha & Racine Counties for the 2025 pilot season. 
+    Hardy is currently serving Kenosha & Racine Counties for the 2025 / 2026 pilot seasons. 
     <span id="waitlist-link" style="display: none;">
         <br>
         <a href="mailto:hello@hardyhomeandgarden.com?subject=Hardy%20Waitlist&body=Hi!%20I'd%20like%20to%20join%20the%20waitlist%20for%20Hardy.%20My%20ZIP%20code%20is:%20">Join our waitlist</a> to be notified when we expand to your area!
