--- a/pages/browse.html
+++ b/pages/browse.html
@@ -840,9 +840,9 @@
         
         <!-- Service Area Notice -->
         <div class="service-area-notice">
-            <h3>🌱 2025 Pilot Program</h3>
+            <h3>🌱 2025 / 2026 Pilot Program</h3>
             <p>
-                During our pilot season, Hardy listings are available exclusively for gardeners in
+                During our pilot seasons, Hardy listings are available exclusively for gardeners in
                 <strong>Kenosha and Racine Counties</strong>.
             </p>
         </div>
