--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Hardy Home and Garden</title>
-    
+<!-- Primary Meta Tags -->
+<meta name="title" content="Hardy - The Community Garden in Your Pocket">
+<meta name="description" content="Connect with neighbors to share your garden's harvest. Free local produce exchange in Kenosha & Racine Counties.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://hardyhome.us/">
+<meta property="og:title" content="Hardy - The Community Garden in Your Pocket">
+<meta property="og:description" content="Connect with neighbors to share your garden's harvest. Free local produce exchange in Kenosha & Racine Counties.">
+<meta property="og:image" content="https://hardyhome.us/img/hardy-social-preview.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://hardyhome.us/">
+<meta property="twitter:title" content="Hardy - The Community Garden in Your Pocket">
+<meta property="twitter:description" content="Connect with neighbors to share your garden's harvest. Free local produce exchange in Kenosha & Racine Counties.">
+<meta property="twitter:image" content="https://hardyhome.us/img/hardy-social-preview.png">    
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
     
