--- a/pages/terms.html
+++ b/pages/terms.html
@@ -4,6 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Use - Hardy Home and Garden</title>
+	<!-- Primary Meta Tags -->
+<meta name="title" content="Hardy - The Community Garden in Your Pocket">
+<meta name="description" content="Connect with neighbors to share your garden's harvest. Free local produce exchange in Kenosha & Racine Counties.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://hardyhome.us/">
+<meta property="og:title" content="Hardy - The Community Garden in Your Pocket">
+<meta property="og:description" content="Connect with neighbors to share your garden's harvest. Free local produce exchange in Kenosha & Racine Counties.">
+<meta property="og:image" content="https://hardyhome.us/img/hardy-social-preview.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://hardyhome.us/">
+<meta property="twitter:title" content="Hardy - The Community Garden in Your Pocket">
+<meta property="twitter:description" content="Connect with neighbors to share your garden's harvest. Free local produce exchange in Kenosha & Racine Counties.">
+<meta property="twitter:image" content="https://hardyhome.us/img/hardy-social-preview.png">
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
@@ -453,7 +472,7 @@
     <div class="container">
         <div class="page-header">
             <h1>Terms of Use</h1>
-            <p class="last-updated">Last Updated: June 3, 2025</p>
+            <p class="last-updated">Last Updated: July 26, 2025</p>
         </div>
         
         <div class="terms-content">
@@ -468,7 +487,7 @@
             <p>By accessing or using Hardy ("the Platform"), you agree to be bound by these Terms of Use ("Terms"). If you do not agree to these Terms, please do not use our Platform.</p>
 
             <h2>2. Platform Description</h2>
-            <p>Hardy is an online platform that facilitates connections between local gardeners and community members who wish to share, trade, or (in the future) sell garden produce, plants, and related items. Hardy serves only as a venue for these connections and is not a party to any exchanges between users.</p>
+            <p>Hardy is an online platform that facilitates connections between local gardeners and community members who wish to share or trade garden produce, plants, and related items ("Produce"). Hardy serves only as a venue for these connections and is not a party to any exchanges between users. In the future, Hardy may offer opportunities for users to sell their Produce and may offer other products for sale through the platform.</p>
 
             <h2>3. User Eligibility</h2>
             <p>You must be at least 18 years old to use Hardy. By using our Platform, you represent and warrant that you meet this age requirement and have the legal capacity to enter into these Terms.</p>
@@ -513,7 +532,7 @@
             <ul>
                 <li>Share items that are spoiled, contaminated, or known to be unsafe</li>
                 <li>Misrepresent the nature, quality, or growing methods of items</li>
-                <li>Share items that are illegal or regulated (such as raw milk in certain jurisdictions)</li>
+                <li>Share items that are illegal or regulated (such as raw milk in certain jurisdictions) in the user's location</li>
                 <li>Engage in discriminatory practices</li>
                 <li>Harass, threaten, or abuse other users</li>
                 <li>Use the Platform for commercial spam or unauthorized advertising</li>
@@ -549,9 +568,8 @@
             <p>While Hardy currently facilitates free sharing and trades, we reserve the right to introduce:</p>
             <ul>
                 <li>Transaction fees for paid exchanges</li>
-                <li>Premium subscription services (Hardy Pro)</li>
                 <li>Featured listing options</li>
-                <li>Marketplace features for gardening supplies</li>
+                <li>Marketplace features for Hardy-themed or other gardening products or supplies</li>
                 <li>Other monetization features as the Platform evolves</li>
             </ul>
             <p>Users will be notified of any changes to fee structures before they take effect.</p>
@@ -571,7 +589,7 @@
             </ul>
 
             <h2>12. Indemnification</h2>
-            <p>You agree to indemnify and hold Hardy, its officers, directors, employees, and agents harmless from any claims, damages, losses, or expenses arising from:</p>
+            <p>You agree to indemnify and hold Hardy, its officers, directors, employees, agents, and parent company harmless from any claims, damages, losses, or expenses arising from:</p>
             <ul>
                 <li>Your use of the Platform</li>
                 <li>Your violation of these Terms</li>
@@ -599,7 +617,7 @@
             </ul>
 
             <h2>15. Dispute Resolution</h2>
-            <p>Any disputes arising from these Terms or your use of Hardy shall be resolved through binding arbitration in accordance with the rules of the American Arbitration Association. The arbitration shall be conducted in Wisconsin.</p>
+            <p>Any disputes arising from these Terms or your use of Hardy shall be resolved through binding arbitration in accordance with the rules of the American Arbitration Association. The arbitration shall be conducted in Kenosha County, Wisconsin.</p>
 
             <h2>16. Changes to Terms</h2>
             <p>We reserve the right to modify these Terms at any time. We will notify users of material changes via email or Platform notification. Continued use of Hardy after changes constitutes acceptance of the new Terms.</p>
