--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 
     <section class="hero">
         <div class="container">
-            <h1>Share Your Garden's Bounty</h1>
+            <h1>The Community Garden In Your Pocket</h1>
             <p>Connect with local gardeners to share, trade, and grow together</p>
             <div class="hero-actions">
                 <a href="pages/browse.html" class="btn btn-secondary">Browse Listings</a>
