--- a/pages/auth-callback.html
+++ b/pages/auth-callback.html
@@ -357,8 +357,16 @@
                 <h1>Something went wrong</h1>
             </div>
             <div class="error-message" style="display: block;" id="main-error"></div>
+            
+            <div style="background-color: #FFF8E1; border: 1px solid #FFE082; border-radius: var(--radius-md); padding: var(--spacing-md); margin: var(--spacing-md) 0;">
+                <p style="margin: 0; font-size: 0.9rem;">
+                    <i class="fas fa-lightbulb" style="color: #F9A825;"></i>
+                    <strong>Using work email?</strong> Corporate security often blocks sign-in links. Try using a code instead.
+                </p>
+            </div>
+            
             <a href="auth.html" class="btn btn-primary btn-block">
-                Back to Sign In
+                Try Again with a Code
             </a>
         </div>
     </div>
