--- a/pages/auth.html
+++ b/pages/auth.html
@@ -548,6 +548,10 @@
                     <div class="form-group">
                         <label for="email">Email Address</label>
                         <input type="email" id="email" required placeholder="you@example.com">
+                        <small style="color: var(--text-secondary); display: block; margin-top: 6px;">
+                            <i class="fas fa-lightbulb" style="color: #F9A825;"></i>
+                            Personal email (Gmail, Yahoo, etc.) works best. Work email security can sometimes block sign-in messages.
+                        </small>
                     </div>
                     
                     <div class="checkbox-group">
