--- a/pages/contact.html
+++ b/pages/contact.html
@@ -799,4 +799,13 @@
                     e.preventDefault();
                     const emailInput = form.querySelector('input[type="email"]');
                     if (emailInput && emailInput.value) {
+                        alert('Thanks for subscribing! We\'ll keep you updated on Hardy\'s development.');
+                        emailInput.value = '';
+                    }
+                });
+            });
+        });
+    </script>
+</body>
+</html>
         
